--- a/css/shared.css
+++ b/css/shared.css
@@ -82,8 +82,8 @@ body {
     background: rgb(0, 0, 0);
     font-size: 1.5vh;
   }
-  #header-and-about-me {
-    margin-right: 20vw;
+  #main-body {
+    margin-right: 5vw;
   }
   #nav-container {
     text-align: center;
